examples/misc/error/compilation/eval_unexpected-index.bfml
let main = [
  $build {
    a: array(3) { i: index }
  }
  . a:i
]